--- a/_posts/2023-05-26-test.md
+++ b/_posts/2023-05-26-test.md
@@ -13,3 +13,7 @@ toc_sticky: true
 date: 2020-05-25
 last_modified_at: 2020-05-25
 ---
+
+`원래 힘으로 돌아가려는 힘 벡터` = \\(\vec{f_{ij,spring}} = -k(\vert\vec{x_i} - \vec{x_j}\vert - l_0){\vec{x_i} - \vec{x_j}\over{\vert\vec{x_i} - \vec{x_j}\vert}} \\)
+
+
