--- a/_posts/cpp/2023-05-26-test.md
+++ b/_posts/cpp/2023-05-26-test.md
@@ -1,6 +1,6 @@
 ---
-title:  "Test"
-excerpt: "test"
+title:  "[C++] 테스트입니다."
+excerpt: "이건 아마도 미리보기 같은거"
 
 categories:
   - Cpp
@@ -14,6 +14,26 @@ date: 2020-05-25
 last_modified_at: 2020-05-25
 ---
 
-`원래 힘으로 돌아가려는 힘 벡터` = \\(\vec{f_{ij,spring}} = -k(\vert\vec{x_i} - \vec{x_j}\vert - l_0){\vec{x_i} - \vec{x_j}\over{\vert\vec{x_i} - \vec{x_j}\vert}} \\)
+# 임정빈
+---
+  - ## **세종과학고 8기**
+  - ## **한양대학교 미래자동차공학과 18학번**
+    - ### 반갑습니다.
+
+```python
+#include <iostream>
+using namespace std;
+int main(){
+  cout << "Hello World" << '\n';
+}
+```
+<https://ihmmaru99.github.io>
+
+> 철은 무거우니까 들지 말자
+  >> 어차피 인생은 굴러먹다가 가는 뜬구름 같은
+
+![test](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/0cbd500e-4fdc-46c8-863b-91678c20dd2a)
+
+
 
 
