--- a/_posts/cpp/2023-05-26-test.md
+++ b/_posts/cpp/2023-05-26-test.md
@@ -9,26 +9,25 @@ tags:
 
 toc: true
 toc_sticky: true
+toc_label: "목차"
  
-date: 2020-05-25
-last_modified_at: 2020-05-25
+date: 2023-05-25
+last_modified_at: 2023-05-29
 ---
 
 # 임정빈
 ---
-  - ## **세종과학고 8기**
-  - ## **한양대학교 미래자동차공학과 18학번**
-    - ### 반갑습니다.
-
-```python
+## **세종과학고 8기**
+  ```c++
 #include <iostream>
 using namespace std;
 int main(){
   cout << "Hello World" << '\n';
 }
 ```
-<https://ihmmaru99.github.io>
-
+## **한양대학교 미래자동차공학과 18학번**
+### 반갑꾸릉내
+---
 > 철은 무거우니까 들지 말자
   >> 어차피 인생은 굴러먹다가 가는 뜬구름 같은
 
