--- a/_posts/cpp/2023-05-26-test3.md
+++ b/_posts/cpp/2023-05-26-test3.md
@@ -1,5 +1,5 @@
 ---
-title:  "[C++] 테스트입니다."
+title:  "[C++] 테스트입니다2"
 excerpt: "이건 아마도 미리보기 같은거"
 
 categories:
@@ -7,9 +7,7 @@ categories:
 tags:
   - [Cpp]
 
-toc: true
 toc_sticky: true
-toc_label: "목차"
  
 date: 2023-05-25
 last_modified_at: 2023-05-29
