--- a/_posts/cpp/2023-05-29-test.md
+++ b/_posts/cpp/2023-05-29-test.md
@@ -1,11 +1,11 @@
 ---
-title:  "[C++] 테스트입니다2"
+title:  "[C++] 테스트입니다"
 excerpt: "이건 아마도 미리보기 같은거"
 
 categories:
-  - Cpp
+  - Algorithm
 tags:
-  - [Cpp]
+  - [BOJ, Programmers]
 
 toc_sticky: true
  
@@ -26,10 +26,8 @@ int main(){
 ## **한양대학교 미래자동차공학과 18학번**
 ### 반갑꾸릉내
 ---
-> 철은 무거우니까 들지 말자
-  >> 어차피 인생은 굴러먹다가 가는 뜬구름 같은
+> 어차피 인생은 굴러먹다가 가는 뜬구름 같은
 
-![test](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/0cbd500e-4fdc-46c8-863b-91678c20dd2a)
 
 
 
