--- a/_posts/programmers/2023-05-29-bingo.md
+++ b/_posts/programmers/2023-05-29-bingo.md
@@ -14,7 +14,7 @@ last_modified_at: 2023-05-30
 
 ## 문제
 빙고는 NxN 크기의 게임 보드 칸에 1부터 NxN까지의 자연수를 중복 없이 하나씩 적은 후 숫자를 하나씩 지워나가는 게임입니다. 이때, 가로, 세로, 대각선 방향으로 한 줄에 적힌 숫자를 모두 지울 경우 빙고를 1개 만들었다고 합니다.
-다음은 4X4 크기의 게임 보드를 이용해 게임을 진행한 예시입니다.
+다음은 4X4 크기의 게임 보드를 이용해 게임을 진행한 예시입니다.<br>
 ![빙고2_rlkqli](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/e13b5836-b275-4bcc-83b3-f5c62c8842f3)<br>
 위와 같이 각 칸에 숫자가 적혀 있을 때, 위 게임 보드에서 순서대로 지운 숫자가 [14,3,2,4,13,1,16,11,5,15]인 경우 아래와 같이 빙고 3개가 만들어집니다.
 ![빙고_xibpii](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/e31e056b-e0e3-4cbb-9600-e13b15ca87cb)<br>
