--- a/_posts/boj/2023-05-30-13305.md
+++ b/_posts/boj/2023-05-30-13305.md
@@ -5,7 +5,7 @@ categories:
 tags:
   - [Algorithm, Coding Test, C++]
 date: 2023-05-30
-last_modified_at: 2023-05-30
+last_modified_at: 2023-05-31
 ---
 # 주유소
 ## 난이도
@@ -35,6 +35,8 @@ last_modified_at: 2023-05-30
 |3|42|원래의 제약조건 이외에 아무 제약조건이 없다.|
 
 ## 결과
+[13305 - 주유소](https://github.com/ihmmaru99/BOJ/blob/main/13305/13305.cpp)
+
 ```c++
 #include <iostream>
 #include <vector>
