--- a/_posts/boj/2023-05-31-2468.md
+++ b/_posts/boj/2023-05-31-2468.md
@@ -5,6 +5,8 @@ categories:
   - BOJ
 tags:
   - [Algorithm, Coding Test, C++]
+date: 2023-05-31
+last_modified_at: 2023-05-31
 ---
 # 안전 영역
 ## 난이도
@@ -30,6 +32,8 @@ tags:
 첫째 줄에 장마철에 물에 잠기지 않는 안전한 영역의 최대 개수를 출력한다.
 
 ## 결과
+[2468 - 안전 영역](https://github.com/ihmmaru99/BOJ/blob/main/2468/2468.cpp)
+
 ```c++
 #include <iostream>
 #include <queue>
