--- a/_posts/boj/2023-05-31-2468.md
+++ b/_posts/boj/2023-05-31-2468.md
@@ -1,5 +1,5 @@
 ---
-title: "[백준][2468] 안전 영역"
+title: "[백준][2468] 안전 영역 (작성 중)"
 
 categories:
   - BOJ
@@ -108,6 +108,6 @@ int main(){
 ### 문제풀이
 > 
 
-## 결과
+## 채점 결과
 <img width="734" alt="스크린샷 2023-05-31 18 46 44" src="https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/3688be97-7bc7-4448-8a3f-f78c48a4b167">
 
