--- a/_posts/boj/2023-05-31-1946.md
+++ b/_posts/boj/2023-05-31-1946.md
@@ -19,6 +19,42 @@ last_modified_at: 2023-05-31
 ## 출력
 
 ## 결과
+[1946 - 신입 사원](https://github.com/ihmmaru99/BOJ/blob/main/1946/1946.cpp)
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <cstring>
+
+using namespace std;
+
+int t, n;
+vector<pair<int,int>> v;
+
+int main(){
+    cin >> t;
+    for(int i=0; i<t; i++){
+        cin >> n;
+        for(int j=0; j<n; j++){
+            int a, b;
+            cin >> a >> b;
+            v.push_back(make_pair(a,b));
+        }
+        sort(v.begin(), v.end());
+        int check = v.front().second;
+        int cnt = 1;
+        for(int j=1; j<v.size(); j++){
+            if(check > v[j].second){
+                check = v[j].second;
+                cnt++;
+            }
+        }
+        cout << cnt << '\n';
+        v.clear();
+    }
+    return 0;
+}
+```
 
 ### 문제풀이
 
