--- a/_posts/boj/2023-06-01-1149.md
+++ b/_posts/boj/2023-06-01-1149.md
@@ -1,11 +1,11 @@
 ---
-title: "[백준][1149] RGB 거리 (작성 중)"
+title: "[백준][1149] RGB 거리"
 categories:
   - BOJ
 tags:
   - [Algorithm, Coding Test, C++]
 date: 2023-06-01
-last_modified_at: 2023-06-1
+last_modified_at: 2023-06-04
 ---
 # RGB 거리
 ## 난이도
@@ -53,6 +53,7 @@ int main(){
 ```
 
 ### 풀이
-
+> 브루트포스를 통해서 각 값에서 다음 집을 칠할 때 가장 낮은 값으로 칠할 수 있는 경우의 수를 찾는다. 각 값을 더해주면서 값을 찾고 찾은 값 중에서 가장 작은 값을 더해주면서 값을 반환하고 반환된 값을 출력한다.
 
 ## 채점 결과
+<img width="732" alt="스크린샷 2023-06-04 19 39 02" src="https://github.com/ihmmaru99/BOJ/assets/109266664/b905459f-f152-4ab1-91c8-668f8237c152">
