--- a/_posts/boj/2023-06-02-7562.md
+++ b/_posts/boj/2023-06-02-7562.md
@@ -1,12 +1,11 @@
 ---
-title: "[백준][7562] 나이트의 이동 (작성 중)"
+title: "[백준][7562] 나이트의 이동"
 
 categories:
   - BOJ
 tags:
   - [Algorithm, Coding Test, C++]
 date: 2023-06-02
-last_modified_at: 2023-06-02
 ---
 # 나이트의 이동
 
@@ -85,5 +84,8 @@ int main() {
 ```
 
 ### 풀이
+> 나이트가 갈 수 있는 위치의 경우의 수는 8가지이다. 갈 수 있는 경우의 수에 대한 이동 값을 dx, dy에 저장한다. 그리고 갈 수 있는 경우의 수를 파악해서 bfs 알고리즘을 돌린다. map 배열을 초기에 0으로 모두 채우고 해당 배열에서 말이 이동한 횟수를 기록해둔다. 그리고 만약 원하는 위치에 이동했다면 bfs를 종료하도록 한다. 그리고 해당 위치에 도달했을 때 이동한 거리가 적혀있는 map의 해당 위치의 인덱스 값에 적혀있는 값을 출력하도록 한다.
 
 ## 채점 결과
+<img width="732" alt="스크린샷 2023-06-04 19 15 34" src="https://github.com/ihmmaru99/BOJ/assets/109266664/98abf7dd-3631-48bc-8a8c-4aec904684cb">
+
