--- a/_posts/boj/2023-06-03-2583.md
+++ b/_posts/boj/2023-06-03-2583.md
@@ -1,5 +1,5 @@
 ---
-title: "[백준][2583] 영역 구하기 (작성 중)"
+title: "[백준][2583] 영역 구하기"
 
 categories:
   - BOJ
@@ -93,6 +93,7 @@ int main(){
 ```
 
 ### 풀이
+> 우리가 확인하고자 하는 것은 영역의 개수와 크기이다. 입력으로 들어온 부분은 나누는 부분이기 때문에 이미 방문했다고 판단해서 visited을 방문했다고 갱신한다. 그 이후 방문하지 않았다고 하는 부분을 bfs를 통해서 확인하면서 넓이를 확인한다. 넓이를 result vector에 넣고 오름차순으로 정렬한다. 정렬된 result의 size와 각 값을 출력하도록 한다.
 
 ### 채점 결과
 <img width="732" alt="스크린샷 2023-06-03 15 14 28" src="https://github.com/ihmmaru99/BOJ/assets/109266664/db0694bc-b909-42a2-87b2-960bccf5817f">
