--- a/_posts/boj/2023-05-31-1946.md
+++ b/_posts/boj/2023-05-31-1946.md
@@ -1,11 +1,11 @@
 ---
-title: "[백준][1946] 신입 사원 (작성 중)"
+title: "[백준][1946] 신입 사원"
 categories:
   - BOJ
 tags:
   - [Algorithm, Coding Test, C++]
 date: 2023-05-31
-last_modified_at: 2023-05-31
+last_modified_at: 2023-06-04
 ---
 
 # 신입 사원
@@ -13,10 +13,17 @@ last_modified_at: 2023-05-31
 > ![10](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/1725e8ac-be34-44d1-a4db-174d0a2cd0dd){:width="20px", height="20px"} <span style="color:#585858"> 실버 1</span>
 
 ## 문제
+언제나 최고만을 지향하는 굴지의 대기업 진영 주식회사가 신규 사원 채용을 실시한다. 인재 선발 시험은 1차 서류심사와 2차 면접시험으로 이루어진다. 최고만을 지향한다는 기업의 이념에 따라 그들은 최고의 인재들만을 사원으로 선발하고 싶어 한다.
+
+그래서 진영 주식회사는, 다른 모든 지원자와 비교했을 때 서류심사 성적과 면접시험 성적 중 적어도 하나가 다른 지원자보다 떨어지지 않는 자만 선발한다는 원칙을 세웠다. 즉, 어떤 지원자 A의 성적이 다른 어떤 지원자 B의 성적에 비해 서류 심사 결과와 면접 성적이 모두 떨어진다면 A는 결코 선발되지 않는다.
+
+이러한 조건을 만족시키면서, 진영 주식회사가 이번 신규 사원 채용에서 선발할 수 있는 신입사원의 최대 인원수를 구하는 프로그램을 작성하시오.
 
 ## 입력
+첫째 줄에는 테스트 케이스의 개수 T(1 ≤ T ≤ 20)가 주어진다. 각 테스트 케이스의 첫째 줄에 지원자의 숫자 N(1 ≤ N ≤ 100,000)이 주어진다. 둘째 줄부터 N개 줄에는 각각의 지원자의 서류심사 성적, 면접 성적의 순위가 공백을 사이에 두고 한 줄에 주어진다. 두 성적 순위는 모두 1위부터 N위까지 동석차 없이 결정된다고 가정한다.
 
 ## 출력
+각 테스트 케이스에 대해서 진영 주식회사가 선발할 수 있는 신입사원의 최대 인원수를 한 줄에 하나씩 출력한다.
 
 ## 결과
 [1946 - 신입 사원](https://github.com/ihmmaru99/BOJ/blob/main/1946/1946.cpp)
@@ -56,6 +63,29 @@ int main(){
 }
 ```
 
-### 풀이
+### 1차 풀이
+> 문제에서 처음 값을 기준으로 정렬하고 두번째 값을 비교하면서 비교한 다음 만약 두번째 값이 위에 첫번째 값보다 크다면 뽑히지 못하기 때문에 이를 이용해서 뽑을 수 있는 신입사원의 수를 계산했다.
+
+이렇게 풀었을 때 예제 입력 1은 통과했으나 예제 입력 2는 통과하지 못했다. 만약 두번째 값이 처음으로 비교하기로 정한 값의 두번째 값보다 크다면 이제는 새로운 값을 가지고서 비교를 했어야 하는데 이를 갱신하는 코드를 아래와 같이 추가하지 않았기 때문에 정확히 출력하지 못했다.
+```c++
+        for(int j=1; j<v.size(); j++){
+            if(check > v[j].second){
+                cnt++;
+            }
+        }
+```
+
+### 2차 풀이
+> 두번 째 케이스에서 '7 3'은 갱신하지 않고 맨 윗순위 사람과만 비교하면 '1 4'를 통과하지만 실제로는 '4 2'가 존재하기 때문에 뽑히지 못한다. 이런 경우를 위해서 check를 설정해서 새롭게 비교할 값을 갱신하도록 했다.
+
+```c++
+        for(int j=1; j<v.size(); j++){
+            if(check > v[j].second){
+                check = v[j].second;
+                cnt++;
+            }
+        }
+```
 
 ## 채점 결과
+<img width="732" alt="스크린샷 2023-06-04 19 09 45" src="https://github.com/ihmmaru99/BOJ/assets/109266664/e28e0595-bc8b-495f-99d1-8e5762b810b3">
