--- a/_posts/boj/2023-05-31-2468.md
+++ b/_posts/boj/2023-05-31-2468.md
@@ -1,12 +1,12 @@
 ---
-title: "[백준][2468] 안전 영역 (작성 중)"
+title: "[백준][2468] 안전 영역"
 
 categories:
   - BOJ
 tags:
   - [Algorithm, Coding Test, C++]
 date: 2023-05-31
-last_modified_at: 2023-05-31
+last_modified_at: 2023-06-04
 ---
 # 안전 영역
 ## 난이도
@@ -106,7 +106,7 @@ int main(){
 }
 ```
 ### 풀이
-> 
+> 각 맵의 데이터를 입력받고 입력받은 맵에서 어떤 높이 값을 지정해야 물에 잠기지 않는 안전 영역의 개수가 최대가 되는지 확인하기 위해서 입력받은 맵 데이터에서 최소 높이와 최대 높이를 지정한다. 해당하는 최소 높이와 최대 높이까지 bfs 알고리즘을 통해서 안전영역의 개수를 확인한다. 그리고 높이를 바꿔가면서 계산을 해야 되기 때문에 방문기록을 저장한 visited 배열을 bfs를 통해서 안전 영역을 확인했을 때마다 초기화해준다.
 
 ## 채점 결과
 <img width="734" alt="스크린샷 2023-05-31 18 46 44" src="https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/3688be97-7bc7-4448-8a3f-f78c48a4b167">
