--- a/_posts/boj/2023-05-30-13305.md
+++ b/_posts/boj/2023-05-30-13305.md
@@ -3,7 +3,7 @@ title: "[백준][13305] 주유소"
 categories:
   - BOJ
 tags:
-  - [Algorithm, Coding Test, C++]
+  - [Algorithm, Greedy, C++]
 date: 2023-05-30
 last_modified_at: 2023-05-31
 ---
