--- a/_posts/boj/2023-05-31-1946.md
+++ b/_posts/boj/2023-05-31-1946.md
@@ -3,7 +3,7 @@ title: "[백준][1946] 신입 사원"
 categories:
   - BOJ
 tags:
-  - [Algorithm, Coding Test, C++]
+  - [Algorithm, Greedy, C++]
 date: 2023-05-31
 last_modified_at: 2023-06-04
 ---
