--- a/_posts/boj/2023-05-31-2468.md
+++ b/_posts/boj/2023-05-31-2468.md
@@ -4,7 +4,7 @@ title: "[백준][2468] 안전 영역"
 categories:
   - BOJ
 tags:
-  - [Algorithm, Coding Test, C++]
+  - [Algorithm, BFS, C++]
 date: 2023-05-31
 last_modified_at: 2023-06-04
 ---
