--- a/_posts/boj/2023-06-01-1149.md
+++ b/_posts/boj/2023-06-01-1149.md
@@ -3,7 +3,7 @@ title: "[백준][1149] RGB 거리"
 categories:
   - BOJ
 tags:
-  - [Algorithm, Coding Test, C++]
+  - [Algorithm, DP, C++]
 date: 2023-06-01
 last_modified_at: 2023-06-04
 ---
