--- a/_posts/boj/2023-06-02-7562.md
+++ b/_posts/boj/2023-06-02-7562.md
@@ -4,7 +4,7 @@ title: "[백준][7562] 나이트의 이동"
 categories:
   - BOJ
 tags:
-  - [Algorithm, Coding Test, C++]
+  - [Algorithm, BFS, C++]
 date: 2023-06-02
 ---
 # 나이트의 이동
