--- a/_posts/boj/2023-06-05-1303.md
+++ b/_posts/boj/2023-06-05-1303.md
@@ -3,7 +3,7 @@ title: "[백준][1303] 전쟁 - 전투"
 categories:
   - BOJ
 tags:
-  - [Algorithm, Coding Test, C++]
+  - [Algorithm, BFS, C++]
 date: 2023-06-05
 last_modified_at: 2023-06-05
 ---
