--- a/_posts/boj/2023-06-03-2583.md
+++ b/_posts/boj/2023-06-03-2583.md
@@ -4,7 +4,7 @@ title: "[백준][2583] 영역 구하기"
 categories:
   - BOJ
 tags:
-  - [Algorithm, Coding Test, C++]
+  - [Algorithm, BFS, C++]
 date: 2023-06-03
 last_modified_at: 2023-06-03
 ---
