--- a/_posts/boj/2023-06-04-16953.md
+++ b/_posts/boj/2023-06-04-16953.md
@@ -3,7 +3,7 @@ title: "[백준][16953] A → B"
 categories:
   - BOJ
 tags:
-  - [Algorithm, Coding Test, C++]
+  - [Algorithm, BFS, C++]
 date: 2023-06-04
 last_modified_at: 2023-06-04
 ---
