--- a/_posts/boj/2023-06-05-9095.md
+++ b/_posts/boj/2023-06-05-9095.md
@@ -8,6 +8,9 @@ date: 2023-06-05
 last_modified_at: 2023-06-05
 ---
 # 1,2,3 더하기
+## 난이도
+> ![8](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/40f259a0-6d4e-4cfa-a954-225e9b42961f){: width="20px", height="20px"} <span 
+
 ## 문제
 정수 4를 1, 2, 3의 합으로 나타내는 방법은 총 7가지가 있다. 합을 나타낼 때는 수를 1개 이상 사용해야 한다.
 - 1+1+1+1
@@ -23,6 +26,10 @@ last_modified_at: 2023-06-05
 첫째 줄에 테스트 케이스의 개수 T가 주어진다. 각 테스트 케이스는 한 줄로 이루어져 있고, 정수 n이 주어진다. n은 양수이며 11보다 작다.
 ## 출력
 각 테스트 케이스마다, n을 1, 2, 3의 합으로 나타내는 방법의 수를 출력한다.
+
+## 풀이 1
+> dfs를 통해서 목표값에 도달할 수 있는지 확인하면서 가능한 경우의 수를 센다. 1,2,3을 더한 경우를 모두 dfs를 통해서 확인한다.
+
 ## 결과 1
 DFS를 이용한 풀이<br>
 [9095_1 - 1,2,3 더하기](https://github.com/ihmmaru99/BOJ/blob/main/9095/9095_1.cpp)
@@ -59,8 +66,19 @@ int main(){
 }
 ```
 
-### 풀이 1
-> dfs를 통해서 목표값에 도달할 수 있는지 확인하면서 가능한 경우의 수를 센다. 1,2,3을 더한 경우를 모두 dfs를 통해서 확인한다.
+## 풀이 2
+> DP를 통해서 풀려면 점화식을 찾을 수 있어야 한다. 해당 점화식을 찾아서 점화식을 통해서 문제의 정답을 찾을 수 있어야 한다.
+점화식은 표를 그려서 계산해보면 다음과 같다.
+
+|n|1|2|3|4|5|
+|:---:|:---:|:---:|:---:|:---:|:---:|
+||1|1+1<br>2|1+1+1<br>1+2<br>2+1<br>3|1+1+1+1<br>1+1+2<br>1+2+1<br>2+1+1<br>2+2<br>1+3<br>3+1|1+1+1+1+1<br>1+1+1+2<br>1+2+1+1<br>2+1+1+1<br>1+2+2<br>2+2+1<br>2+1+2<br>1+1+3<br>1+3+1<br>3+1+1<br>2+3<br>3+2<br>|
+|경우의수|1|2|4|7|13|
+
+다음과 같은 결과가 나옴을 알 수 있고 점화식을 세우면 다음과 같다.
+\\[DP(i) = DP(i-1) + DP(i-2) + DP(i-3)\\]
+
+다음 점화식을 이용해서 문제를 풀면 되며 문제에서 11보다 작은 숫자들만 들어오므로 dp의 배열을 12까지만 선언해서 확인한다.
 
 ## 결과 2
 DP를 이용한 풀이<br>
@@ -86,20 +104,6 @@ int main(){
     }
 }
 ```
-
-### 풀이 2
-> DP를 통해서 풀려면 점화식을 찾을 수 있어야 한다. 해당 점화식을 찾아서 점화식을 통해서 문제의 정답을 찾을 수 있어야 한다.
-점화식은 표를 그려서 계산해보면 다음과 같다.
-
-|n|1|2|3|4|5|
-|:---:|:---:|:---:|:---:|:---:|:---:|
-||1|1+1<br>2|1+1+1<br>1+2<br>2+1<br>3|1+1+1+1<br>1+1+2<br>1+2+1<br>2+1+1<br>2+2<br>1+3<br>3+1|1+1+1+1+1<br>1+1+1+2<br>1+2+1+1<br>2+1+1+1<br>1+2+2<br>2+2+1<br>2+1+2<br>1+1+3<br>1+3+1<br>3+1+1<br>2+3<br>3+2<br>|
-|경우의수|1|2|4|7|13|
-
-다음과 같은 결과가 나옴을 알 수 있고 점화식을 세우면 다음과 같다.
-\\[DP(i) = DP(i-1) + DP(i-2) + DP(i-3)\\]
-
-다음 점화식을 이용해서 문제를 풀면 되며 문제에서 11보다 작은 숫자들만 들어오므로 dp의 배열을 12까지만 선언해서 확인한다.
 
 ## 채점 결과
 <img width="733" alt="스크린샷 2023-06-05 16 25 30" src="https://github.com/ihmmaru99/BOJ/assets/109266664/faea924d-71db-475b-b81c-4d9140736b54">
