--- a/_posts/boj/2023-06-05-9095.md
+++ b/_posts/boj/2023-06-05-9095.md
@@ -9,7 +9,7 @@ last_modified_at: 2023-06-05
 ---
 # 1,2,3 더하기
 ## 난이도
-> ![8](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/40f259a0-6d4e-4cfa-a954-225e9b42961f){: width="20px", height="20px"} <span 
+> ![8](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/40f259a0-6d4e-4cfa-a954-225e9b42961f){: width="20px", height="20px"} <span style="color:#585858"> 실버 3</span>
 
 ## 문제
 정수 4를 1, 2, 3의 합으로 나타내는 방법은 총 7가지가 있다. 합을 나타낼 때는 수를 1개 이상 사용해야 한다.
