--- a/_posts/boj/2023-06-04-16953.md
+++ b/_posts/boj/2023-06-04-16953.md
@@ -10,7 +10,7 @@ last_modified_at: 2023-06-04
 
 # A → B
 ## 난이도
-![9](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/05e4b069-bd56-4060-913f-a3b773faccf4){:width="20px", height="20px"} <span style="color:#585858"> 실버 2</span>
+> ![9](https://github.com/ihmmaru99/ihmmaru99.github.io/assets/109266664/05e4b069-bd56-4060-913f-a3b773faccf4){:width="20px", height="20px"} <span style="color:#585858"> 실버 2</span>
 
 ## 문제
 정수 A를 B로 바꾸려고 한다. 가능한 연산은 다음과 같은 두 가지이다.
