--- a/_posts/boj/2023-06-10-2527.md
+++ b/_posts/boj/2023-06-10-2527.md
@@ -77,3 +77,4 @@ int main(){
 ```
 
 ## 채점 결과
+<img width="730" alt="스크린샷 2023-06-13 11 24 11" src="https://github.com/ihmmaru99/BOJ/assets/109266664/12c90dc1-2a34-4a63-958e-911ef2460762">
