--- a/_posts/boj/2023-06-12-9663.md
+++ b/_posts/boj/2023-06-12-9663.md
@@ -62,3 +62,4 @@ int main(){
 ```
 
 # 채점 결과
+<img width="730" alt="스크린샷 2023-06-13 11 22 44" src="https://github.com/ihmmaru99/BOJ/assets/109266664/88fbf192-5d3d-4bb7-86f4-abd450bb9aa3">
